Fixed large gap

--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 /*
 CSS Code by Jeffrey Chai
-This is used to enhance the color and add more pizzaz to the website itself.
+This is used to enhance the color and add more pizazz to the website itself.
 */
 
 body {
@@ -20,11 +20,12 @@ body {
 }
 
 .mast-heading{
+  padding-top: 0;
   margin-top: 0;
 }
 
 .masthead {
-  padding: 6em 0;
+  padding-top: 0;
   background-size: cover;
   background-repeat: no-repeat;
   border-top: solid 1em #ff7d32;
